--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: autogas_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -28,46 +28,63 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cupertino_icons: ^1.0.8
+  dio: ^5.8.0+1
+  equatable: ^2.0.7
+  firebase_core: ^3.13.1
+  firebase_messaging: ^15.2.6
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.1.1
+  flutter_local_notifications: ^19.2.1
+  flutter_native_splash: ^2.4.6
+  flutter_polyline_points: ^2.1.0
+  flutter_rating_bar: ^4.0.1
+  fluttertoast: ^8.2.12
+  font_awesome_flutter: ^10.8.0
+  geocoding: ^3.0.0
+  geolocator: ^14.0.0
+  get_it: ^8.0.3
+  google_maps_flutter: ^2.12.2
+  google_places_flutter: ^2.1.0
+  http: ^1.4.0
+  http_parser: ^4.1.2
+  image_picker: ^1.1.2
+  injectable: ^2.5.0
+  lottie: ^3.3.1
+  modal_bottom_sheet: ^3.0.0
+  path: ^1.9.1
+  shared_preferences: ^2.5.3
+  socket_io_client: ^3.1.2
+  toggle_switch: ^2.3.0
+  url_launcher: ^6.3.1
+  video_player: ^2.9.5
 
 dev_dependencies:
+  build_runner: ^2.4.15
+  flutter_launcher_icons: ^0.14.3
+  flutter_lints: ^5.0.0
+  # flutter_native_splash: ^2.4.6
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  injectable_generator: ^2.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
